Corrected "show more" link visibility

--- a/app/assets/styles/page/index.less
+++ b/app/assets/styles/page/index.less
@@ -33,3 +33,8 @@
         margin-top: 0px;
     }
 }
+
+.show-more {
+    font-size: 20px;
+    padding: 10px;
+}
